--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,38 +1,32 @@
-<h1>Cats!</h1>
+<h1>Burger</h1>
 
-<h2>Cats that are not sleepy!</h2>
+<h2>Burgers before devoured!</h2>
 
 <ul>
-  {{#each cats}}
-    {{#unless sleepy}}
-      {{> cats/cat-block sleep=true}}
+  {{#each burgers}}
+    {{#unless this.devoured}}
+      <p>{{this.burger}}</p>
     {{/unless}}
   {{/each}}
 </ul>
 
-<h2>Cats that are sleepy!</h2>
-
+<h2>Burgers devoured!</h2>
+{{!-- 
 <ul>
-  {{#each cats}}
-    {{#if sleepy}}
-      {{> cats/cat-block sleep=false}}
+  {{#each burgers}}
+    {{#if devour}}
+      {{burgers/burger-block devour=true}}
     {{/if}}
   {{/each}}
-</ul>
+</ul> --}}
 
-<h2>Add a Cat</h2>
+<h2>Add a burger</h2>
 <form class="create-form">
 
   <div class="form-group">
-    <label for="ca">Cat Name:</label>
+    <label for="ca">Burger Name:</label>
     <input type="text" id="ca" name="name">
   </div>
 
-  <div class="form-group">
-    <label for="slee">Sleepy?</label><br>
-    <input type="radio" name="sleepy" value="1" checked> Sleepy!<br>
-    <input type="radio" name="sleepy" value="0"> Awake
-  </div>
-
-  <button type="submit">Add Cat</button>
+  <button type="submit">Submit</button>
 </form>
